<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Role"
        android:textSize="40dp"
        android:padding="20dp" />

    <Button
        android:id="@+id/organizer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Organizer"/>

    <Button
        android:id="@+id/attendee_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Attendee"/>

</LinearLayout>